--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
             <p class="text-lg lg:text-xl font-semibold w-[70%] my-4 text-slate-200">Are you a new patient?  Don't worry we're here to care dental problems. Fill the form that given beside or just give a call.
             </p>
             <p class="text-xl lg:text-2xl text-white font-bold mt-4 lg:mt-10">NEED ASSISTANCE?</p>
-            <p class="text-sm lg:text-xl text-white font-semibold cursor-pointer hover:underline my-4">+916297524875</p>
+            <p class="text-sm lg:text-xl text-white font-semibold cursor-pointer hover:underline my-4">+928700134875</p>
           </div>
 
           <div class="lg:w-[50%] px-2 lg:py-20 lg:z-30">
@@ -376,7 +376,7 @@
             <p class="text-slate-100 text-sm font-bold">
               FOR ANY QUERY
             </p>
-            <h2 class="text-lg font-bold text-white">Call us :- 8926391131 / 9153176655</h2>
+            <h2 class="text-lg font-bold text-white">Call us :- +928700134875</h2>
           </div>
 
       </section>
@@ -470,7 +470,7 @@
             <p class="text-slate-100 text-sm font-bold">
               FOR ANY QUERY
             </p>
-            <h2 class="text-lg font-bold text-white">Call us :- 8926391131 / 9153176655</h2>
+            <h2 class="text-lg font-bold text-white">Call us :- +928700134875</h2>
           </div>
         </div>
         </div>
@@ -595,8 +595,8 @@
             <span class="bg-[#d2edff2e] rounded-full w-10 h-10 flex justify-center items-center mx-3"><i class="fa-solid fa-map-location-dot"></i></span>
             <div>
               <p class="text-base lg:text-xl">Address</p>
-              <p class="text-xs lg:text-sm">Tahaj Medical Hall, kalna-1, WB, India <br>
-                West Bengal, India 713409</p> 
+              <p class="text-xs lg:text-sm">Tahaj Medical Hall, kalna-1, WB, Pak <br>
+                West Bengal, Pak 713409</p> 
             </div>
           </div>
           
@@ -604,8 +604,7 @@
             <span class="bg-[#d2edff2e] rounded-full w-10 h-10 flex justify-center items-center mx-2"><i class="fa-solid fa-mobile-screen-button"></i></span>
             <div>
               <p class="text-base lg:text-xl">Phone</p>
-              <p class="text-xs lg:text-sm">+916297524875 /
-                +918768610974</p> 
+              <p class="text-xs lg:text-sm">+928700134875</p> 
             </div>
           </div>
 
@@ -613,7 +612,7 @@
             <span class="bg-[#d2edff2e] rounded-full w-10 h-10 flex justify-center items-center mx-3"><i class="fa-solid fa-envelope"></i></span>
             <div>
               <p class="text-base lg:text-xl">Email</p>
-              <p class="text-xs lg:text-sm">imranmondal26808@gmail.com</p> 
+              <p class="text-xs lg:text-sm">example123@gmail.com</p> 
             </div>
           </div>
         </div>
@@ -634,7 +633,7 @@
     <footer class="w-full px-12 py-10 bg-[#1D3157] text-white">
       <div class="text-slate-300 underline text-sm text-right animate-bounce my-2"><a href="#home" >Back To Top </a></div>
       <section class="w-full lg:m-auto flex flex-col lg:flex-row lg:justify-between ">
-        <p class="sm:text-center">Copyright © 2022 | Powered by <a class="text-yellow-300 hover:underline hover:text-yellow-600" href="https://skriponux.com" target="_blank"></a> aka Sk Ripon</p>
+        <p class="sm:text-center">Copyright © 2022 | Powered by <a class="text-yellow-300 hover:underline hover:text-yellow-600" href="#" target="_blank"></a> aka Sk Ripon</p>
         <div class="flex items-center justify-center lg:gap-x-7 lg:content-end lg:ml-96 mt-5 gap-x-4">
           <a href="#" target="_blank" class="hover:text-green-500"><i class="fa-brands fa-github fa-xl"></i></span>
           <a href="#" target="_blank" class="hover:text-blue-400"><i class="fa-brands fa-linkedin-in fa-xl"></i></span>
